# hse_architecture

./: README.md
homework1/: README.md
homework1/main/: main.sln
homework1/main/Debug/: main.ilk
homework1/main/main/: Matrix.h  SimpleArray.cpp  SimpleMatrix.cpp  SimpleMatrix.h  TriangleMatrix.cpp  TriangleMatrix.h  container.h  diagonal.cpp  diagonal.h  main.cpp  main.vcxproj  main.vcxproj.filters
homework1/main/main/Debug/: main.exe.recipe  vc142.idb
homework1/main/main/Debug/main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  main.lastbuildstate
homework2/Answers/Test1/: 1.txt  2.txt
homework2/Answers/Test2/: 1.txt  2.txt
homework2/Answers/Test3/: 1.txt  2.txt
homework2/Answers/Test4/: 1.txt  2.txt
homework2/Answers/Test5/: 1.txt  2.txt
homework2/Program/: CMakeLists.txt
homework2/Program/headers/: commonSquare.hpp  container.hpp  diagonalMatrix.hpp  random.hpp  squareMatrix.hpp  triangleDownMatrix.hpp  utils.hpp
homework2/Program/source/: commonSquare.cpp  container.cpp  diagonalMatrix.cpp  main.cpp  random.cpp  squareMatrix.cpp  triangleDownMatrix.cpp  utils.cpp
homework2/Tests/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
homework3/: input.txt  main.py  matrix.py  random_generation.py  sorting.py  test_generation.py
homework3/tests/: answer_test2.txt
